[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
description = "Project automation helpers for the regorus workspace"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.12"
toml_edit = "0.22"
semver = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
