[workspace]

[package]
name = "regorus-ffi"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0"
regorus = { path  = "../..", default-features = false }
serde_json = "1.0.140"

[profile.release]
# Enable full debug info for optimized builds.
debug = "full"
# Split debuginfo into its own file to reduce binary size.
split-debuginfo = "packed"
lto = true
codegen-units = 1

[features]
default = ["ast", "std", "coverage", "regorus/arc", "regorus/full-opa"]
ast = ["regorus/ast"]
std = ["regorus/std"]
coverage = ["regorus/coverage"]
custom_allocator = []

[build-dependencies]
cbindgen = "0.28.0"
csbindgen = "=1.9.3"
