[package]
name = "regoruspy"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/microsoft/regorus/bindings/python"
description = "Python bindings for Regorus - a fast, lightweight Rego interpreter written in Rust"
keywords = ["interpreter", "opa", "policy-as-code", "rego"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[features]
default = ["ast", "coverage", "regorus/std", "regorus/full-opa"]
ast = ["regorus/ast"]
coverage = ["regorus/coverage"]

[dependencies]
anyhow = "1.0"
ordered-float = "5.0.0"
pyo3 = {version = "0.23.5", features = ["anyhow", "extension-module"] }
regorus = { path  = "../..", default-features = false, features = ["arc"] }
serde_json = "1.0.140"

