[package]
name = "regorusjs"
version = "0.2.2"
edition = "2021"
repository = "https://github.com/microsoft/regorus/bindings/wasm"
description = "WASM bindings for Regorus - a fast, lightweight Rego interpreter written in Rust"
keywords = ["interpreter", "opa", "policy-as-code", "rego"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[features]
default = ["ast", "coverage", "regorus/std", "regorus/full-opa"]
ast = ["regorus/ast"]
coverage = ["regorus/coverage"]

[dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
regorus = { path  = "../..", default-features = false, features = ["arc"] }
serde_json = "1.0.139"
uuid = { version = "1.14", features = ["rng-getrandom"] }
wasm-bindgen = "=0.2.100"

[dev-dependencies]
wasm-bindgen-test = "0.3.40"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
