[workspace]

[package]
name = "regorusjs"
version = "0.9.0"
edition = "2021"
repository = "https://github.com/microsoft/regorus/bindings/wasm"
description = "WASM bindings for Regorus - a fast, lightweight Rego interpreter written in Rust"
keywords = ["interpreter", "opa", "policy-as-code", "rego"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[features]
default = [
	"ast",
	"coverage",
	"regorus/std",
	"regorus/base64",
	"regorus/base64url",
	"regorus/glob",
	"regorus/graph",
	"regorus/hex",
	"regorus/http",
	"regorus/jsonschema",
	"regorus/net",
	"regorus/opa-runtime",
	"regorus/regex",
	"regorus/semver",
	"regorus/time",
	"regorus/uuid",
	"regorus/urlquery",
	"regorus/yaml"
]
ast = ["regorus/ast"]
coverage = ["regorus/coverage"]

[dependencies]
regorus = { path  = "../..", default-features = false, features = ["arc"] }
serde_json = "1.0.140"
wasm-bindgen = "0.2.100"
# Specify uuid as a mandatory dependency so as to enable `js` feature which is now required
# when targeting wasm32-unknown-unknown.
uuid = { version = "1.15.1", default-features = false, features = ["v4", "fast-rng", "js"]}
# Enable wasm_js. See https://docs.rs/getrandom/latest/getrandom/#webassembly-support
getrandom_for_jsonschema = { package = "getrandom", version = "0.2.15", features = ["std", "js"] }
getrandom = { version = "0.3.1", features = ["std", "wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.40"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
