[package]
name = "ensure_no_std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.83", default-features = false }
regorus = { path = "../..", default-features = false, features = ["msft-rego-no-std"] }
