[package]
name = "ensure_no_std"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.101", default-features = false }
regorus = { path = "../..", default-features = false, features = ["opa-no-std"] }
