[package]
name = "regorusrb"
version = "0.2.3"
edition = "2024"
description = "Ruby bindings for Regorus - a fast, lightweight Rego interpreter written in Rust"
publish = false

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[features]
default = ["ast", "coverage", "regorus/std", "regorus/full-opa"]
ast = ["regorus/ast"]
coverage = ["regorus/coverage"]

[dependencies]
magnus = { version = "0.7.1" }
regorus = { path = "../../../..", default-features = false, features = ["arc"] }
serde_json = "1.0.140"
serde_magnus = "0.9.0"
